--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Practicas</string>
+    <string name="ButtonText_action">modificar etiqueta</string>
+    <string name="text_first">primer texto</string>
+    //<string name="text_second">segundo texto</string>
 </resources>
