--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Practicas</string>
+    <string name="button_sort">Ordenar</string>
+    <string name="text_input_hint">Pista: 1, 3, 2, 4</string>
 </resources>
