Creada prueba instrumentada basada en la practica 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Practicas</string>
+    <string name="ButtonText_notification">notificacion</string>
+    <string name="toast">Este es un toast</string>
 </resources>
